home-automation/zigbee2mqtt/zigbee2mqtt.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: zigbee2mqtt
  name: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zigbee2mqtt
    spec:
      containers:
        - name: zigbee2mqtt
          image: docker.io/koenkk/zigbee2mqtt:2.14.2@sha256:addbfb08fcef2e4477de1535636118241e10d13e898fbe4d9faba8a4d7396311
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: zigbee2mqtt-data
              mountPath: /data
            - name: zigbee2mqtt-udev
              mountPath: /run/udev
            - name: ttyacm
              mountPath: /dev/ttyACM0
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: zigbee2mqtt-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
        - name: zigbee2mqtt-udev
          hostPath:
            path: /run/udev
        - name: ttyacm
          hostPath:
            path: /dev/serial/by-id/usb-ITEAD_SONOFF_Zigbee_3.0_USB_Dongle_Plus_V2_20221101110016-if00
        - name: zigbee2mqtt-config
          configMap:
            name: zigbee2mqtt
