home-automation/zigbee2mqtt/zigbee2mqtt.Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: zigbee2mqtt
  name: zigbee2mqtt
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: zigbee2mqtt
