home-automation/zigbee2mqtt/zigbee2mqtt.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Manage Zigbee devices via MQTT
    gethomepage.dev/group: Automation
    gethomepage.dev/icon: zigbee2mqtt.png
    gethomepage.dev/name: Zigbee2MQTT
spec:
  rules:
    - host: z2mqtt.home.elkiaer.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  name: http
